fixed the navbar and aligned the elements to it

--- a/Assets/Stylesheets/homepage-style.css
+++ b/Assets/Stylesheets/homepage-style.css
@@ -57,9 +57,16 @@ div#img-gallery-2 {
     grid-row: 2;
 }
 
-/* 3. Snap Scroll Container */
-.scroll-snap-container {
-    height: 90vh;
-    
+/* 3. Time Carousel */
+#time-carousel-item1 {
+    background: url(../Images/infinite-gallery-r1/old-sp_1.png) center/cover no-repeat;
+}
+
+#time-carousel-item2 {
+    background: url(../Images/infinite-gallery-r1/old-sp_1.png) center/cover no-repeat;
+}
+
+#time-carousel-item3 {
+    background: url(../Images/infinite-gallery-r1/old-sp_1.png) center/cover no-repeat;
 }
 
